# pythonGuide

./: .gitignore  README.md  fastapi-guide-complete.md  md-to-pdf.config.js  pdf-style.css
docs/: 01-introduction.md  02-backend-basics.md  03-installation.md  04-first-project.md  05-routing-content.md  06-sqlalchemy-database.md  07-crud-example.md  08-authentication.md  09-deployment.md  10-project-note-api.md  11-project-blog-api.md  12-utilities.md  13-testing-deep.md  14-file-upload.md  15-background-tasks.md  16-error-logging.md  glossary.md
examples/04-HelloFastAPI/: .gitignore  README.md  pyproject.toml  requirements.txt
examples/04-HelloFastAPI/app/: __init__.py  main.py
examples/05-QuoteAPI/: .gitignore  README.md  pyproject.toml
examples/05-QuoteAPI/app/: main.py  schemas.py
examples/05-QuoteAPI/app/routers/: quotes.py
examples/05-QuoteAPI/tests/: test_quotes.py
examples/06-SQLAlchemyTodo/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
examples/06-SQLAlchemyTodo/alembic/: env.py
examples/06-SQLAlchemyTodo/alembic/versions/: .gitkeep
examples/06-SQLAlchemyTodo/app/: config.py  db.py  main.py  models.py  schemas.py
examples/07-TodoAPI/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
examples/07-TodoAPI/alembic/: env.py
examples/07-TodoAPI/alembic/versions/: 0001_create_todos.py
examples/07-TodoAPI/app/: config.py  crud.py  db.py  main.py  models.py  schemas.py
examples/07-TodoAPI/app/routers/: todos.py
examples/07-TodoAPI/tests/: conftest.py  test_todos.py
examples/08-AuthExample/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
examples/08-AuthExample/alembic/: env.py
examples/08-AuthExample/alembic/versions/: 0001_create_user.py
examples/08-AuthExample/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
examples/08-AuthExample/app/routers/: auth.py  users.py
examples/08-AuthExample/tests/: conftest.py  test_auth.py
examples/10-NoteAPI/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
examples/10-NoteAPI/alembic/: env.py
examples/10-NoteAPI/alembic/versions/: 0001_initial.py
examples/10-NoteAPI/app/: __init__.py  config.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
examples/10-NoteAPI/app/routers/: __init__.py  auth.py  notes.py
examples/10-NoteAPI/tests/: conftest.py  test_notes.py
examples/11-BlogAPI/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
examples/11-BlogAPI/alembic/versions/: 0001_initial.py
examples/11-BlogAPI/app/: config.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
examples/11-BlogAPI/app/routers/: auth.py  comments.py  posts.py  tags.py
examples/11-BlogAPI/tests/: conftest.py  test_blog.py
examples/13-TestingDeep/: .gitignore  README.md  pyproject.toml
examples/13-TestingDeep/app/: main.py  services.py
examples/13-TestingDeep/tests/: conftest.py  test_health_and_quotes.py  test_parametrize.py  test_rate_mock.py
examples/14-FileUpload/: .gitignore  README.md  pyproject.toml
examples/14-FileUpload/app/: main.py
examples/14-FileUpload/tests/: conftest.py  test_files.py
examples/15-BackgroundTasks/: .gitignore  README.md  pyproject.toml
examples/15-BackgroundTasks/app/: main.py  state.py  tasks.py
examples/15-BackgroundTasks/tests/: conftest.py  test_background_tasks.py
examples/16-ErrorLogging/: .gitignore  README.md  pyproject.toml
examples/16-ErrorLogging/app/: errors.py  logging_config.py  main.py  middleware.py  request_context.py
examples/16-ErrorLogging/tests/: conftest.py  test_errors.py
