[project]
name = "auth-example"
version = "0.1.0"
description = "FastAPI 가이드 08장 — 회원가입·로그인·보호된 라우트 예제 (JWT + Bcrypt)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
