[project]
name = "testing-deep"
version = "0.1.0"
description = "FastAPI 가이드 13장 — 픽스처 설계, 파라미터화, 에러 케이스, 외부 HTTP 호출 모킹까지 다루는 테스트 심화 예제"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
