[project]
name = "background-tasks"
version = "0.1.0"
description = "FastAPI 가이드 15장 — 응답을 먼저 보내고 뒤에서 처리하는 BackgroundTasks 예제"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
