[project]
name = "error-logging"
version = "0.1.0"
description = "FastAPI 가이드 16장 — 커스텀 예외, 일관된 에러 응답 스키마, 요청 ID 미들웨어, 표준 logging 설정을 다루는 에러 핸들링·로깅 심화 예제"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
